Fix updates of shapes belonging to a transformed group

shapeInterface()->removeShape(this) must be called before we reset
the parent of the shape, because it calls shapeToBeRemovedFromHierarchy()
which issues updates for the shape removal. The latter call should have
access to the absolute transformation for these updates.

BUG:443161